--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
-Html Webpack Plugin:
-<pre>
-  ReferenceError: include is not defined
-  
-  - index.ejs:9 eval
-    [.]/[html-webpack-plugin]/lib/loader.js!./web/index.ejs:9:6
-  
-  - index.ejs:14 module.exports
-    [.]/[html-webpack-plugin]/lib/loader.js!./web/index.ejs:14:3
-  
-  - index.js:264 
-    [wallet]/[html-webpack-plugin]/index.js:264:16
-  
-  - util.js:16 tryCatcher
-    [wallet]/[bluebird]/js/release/util.js:16:23
-  
-  - promise.js:512 Promise._settlePromiseFromHandler
-    [wallet]/[bluebird]/js/release/promise.js:512:31
-  
-  - promise.js:569 Promise._settlePromise
-    [wallet]/[bluebird]/js/release/promise.js:569:18
-  
-  - promise.js:606 Promise._settlePromiseCtx
-    [wallet]/[bluebird]/js/release/promise.js:606:10
-  
-  - async.js:138 Async._drainQueue
-    [wallet]/[bluebird]/js/release/async.js:138:12
-  
-  - async.js:143 Async._drainQueues
-    [wallet]/[bluebird]/js/release/async.js:143:10
-  
-  - async.js:17 Immediate.Async.drainQueues
-    [wallet]/[bluebird]/js/release/async.js:17:14
-  
-</pre>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>react native</title>
+  </head>
+  <body>
+    
+      <!-- Single Page Apps for GitHub Pages -->
+      <script type="text/javascript">
+        // Single Page Apps for GitHub Pages
+        // https://github.com/rafrex/spa-github-pages
+        // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+        // ----------------------------------------------------------------------
+        // This script checks to see if a redirect is present in the query string
+        // and converts it back into the correct url and adds it to the
+        // browser's history using window.history.replaceState(...),
+        // which won't cause the browser to attempt to load the new url.
+        // When the single page app is loaded further down in this file,
+        // the correct url will be waiting in the browser's history for
+        // the single page app to route accordingly.
+        (function(l) {
+          if (l.search) {
+            var q = {};
+            l.search.slice(1).split('&').forEach(function(v) {
+              var a = v.split('=');
+              q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+            });
+            if (q.p !== undefined) {
+              window.history.replaceState(null, null,
+                l.pathname.slice(0, -1) + (q.p || '') +
+                (q.q ? ('?' + q.q) : '') +
+                l.hash
+              );
+            }
+          }
+        }(window.location))
+      </script>
+    
+    <div id="root"></div>
+  <script type="text/javascript" src="/chizukeki/bundle.js"></script></body>
+</html>
